# ng-bazel-genfile-metadata-bundle

./: .gitignore  README.md  WORKSPACE  angular-tsconfig.json  package.json
src/: BUILD.bazel  index.ts  real_file.ts
