package(default_visibility=["//visibility:public"])

load("@npm_angular_bazel//:index.bzl", "ng_module")

ng_module(
  name = "src",
  srcs = glob(["*.ts"]) + [":genfile"],
  module_name = "@angular/material-examples",
  deps = [
      "@npm//@angular/core",
  ],
)

genrule(
  name = "genfile",
  outs = ["genfile.ts"],
  cmd = """
    echo "import {NgModule} from '@angular/core';\n@NgModule({})\nexport class MyModule {}" > $@
  """,
  output_to_bindir = True,
)

